1. Collection API Улучшения[#132289]